<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_bottom">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_tv_black_24dp"
        android:title="@string/title_news" />
    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/title_maps" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_local_hospital_black_24dp"
        android:title="@string/title_hospital" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_chat" />

</menu>
